# Exploring-Image-and-Audio-Processing-with-Python-From-Poetry-Tool

./: pyproject.toml
filehandling/: Image_file_handling_opencv.py  handle_data_tensorflow.py  image_file_handling_matplotlib.py  image_process_PLI_and_Numpy.py  image_process_PLI_and_Numpy_GS.py  image_process_tensorflow.py  load_wavefile_from_wave.py  load_wavefile_scipy.py  plot_wavefile_np_plt.py
